--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.hibernate:hibernate-validator")
     compile("org.apache.tomcat.embed:tomcat-embed-el")
+
     testCompile("junit:junit")
+    testCompile("org.mockito:mockito-core")
+    testCompile("org.springframework:spring-test")
 }
